--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,18 +4,18 @@ server.port=8080
 spring.application.name=user-management-service
 
 # db credential
-db.host=yamanote.proxy.rlwy.net
-db.port=15609
-db.name=railway
+db.host=localhost
+db.port=5432
+db.name=bfsdb
 
 spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/${db.name}
 spring.datasource.username=postgres
-spring.datasource.password=xCqsSCKLGecTwauOFwHaZgikhPcVlXbX
+spring.datasource.password=mobilebankingbfs1
 spring.jpa.show-sql=false
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=user_management_service
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 number.otp.random="0123456789"
