--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,13 +4,14 @@ server.port=8080
 spring.application.name=user-management-service
 
 # db credential
-db.host=localhost
-db.port=5432
-db.name=bfsdb
+#db.host=yamanote.proxy.rlwy.net
+#db.port=23243
+#db.name=railway
 
-spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/${db.name}
+spring.datasource.url=jdbc:postgresql://yamanote.proxy.rlwy.net:23243/railway
 spring.datasource.username=postgres
-spring.datasource.password=mobilebankingbfs1
+spring.datasource.password=fpHwEnqVtLBgnpcvVNcTkXaITHiqfSsI
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
