--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 server.servlet.context-path=/api/usermanagementservice
-server.port=8080
+server.port=${PORT:8080}
 
 spring.application.name=user-management-service
 
