--- a/pom.xml
+++ b/pom.xml
@@ -134,4 +134,12 @@
 		</repository>
 	</repositories>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/Yunrizal145/app-banking-user-ms</url>
+		</repository>
+	</distributionManagement>
+
 </project>
