--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.spring</groupId>
 	<artifactId>user-management-service</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>user-management-service</name>
 	<description>user management service for banking</description>
@@ -136,7 +136,7 @@
 
 	<distributionManagement>
 		<repository>
-			<id>github</id>
+			<id>github-user-ms</id>
 			<name>GitHub Packages</name>
 			<url>https://maven.pkg.github.com/Yunrizal145/app-banking-user-ms</url>
 		</repository>
